--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,22 @@
 {
-    "presets":[
-        "@babel/preset-env",
+    "presets": [
+        [
+            "@babel/preset-env",
+            {
+                "targets": {
+                    "node": "10"
+                }
+            }
+        ],
         "@babel/preset-react"
-    ]
+    ],
+    "env": {
+        "development": {
+            "plugins": [
+                "transform-class-properties",
+                "react-hot-loader/babel",
+                "babel-plugin-transform-object-assign"
+            ]
+        }
+    }
 }
